+ Partials, DI , 自動生成的MVC

--- a/LayoutTry/appsettings.json
+++ b/LayoutTry/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "ISpanFin": "Data Source=.;TrustServerCertificate=true;Initial Catalog=ISpanFin;Integrated Security=True;Encrypt=False"
+    // 紹峰的連接字串 "DefaultConnection": "Data Source='tailsx.asuscomm.com';Initial Catalog=ISpanFin;Integrated Security=False;User ID=Tails;Password=Aa123698745; TrustServerCertificate=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
